--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section>
             <h2 class="section-title"> FEATURED PRODUCTS</h2>
             <ul class="products-card">
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product1.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
@@ -42,49 +42,49 @@
                     </a>
 
                 </li>
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product2.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
                         <p class="products-price">56$</p>
                     </a>
                 </li>
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product3.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
                         <p class="products-price">56$</p>
                     </a>
                 </li>
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product4.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
                         <p class="products-price">56$</p>
                     </a>
                 </li>
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product5.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
                         <p class="products-price">56$</p>
                     </a>
                 </li>
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product6.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
                         <p class="products-price">56$</p>
                     </a>
                 </li>
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product7.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
                         <p class="products-price">56$</p>
                     </a>
                 </li>
-                <li>
+                <li class="products-card-list">
                     <a href="#" class="card">
                         <img src="img/product8.jpg" alt="product photo" width="256" height="286">
                         <p class="products-name">Blue Tshirt</p>
